# HorizonOS

./: .clang-format  .gdbinit  .gitignore  .gitlab-ci.yml  .snyk  CMakeLists.txt  Readme.md  meson.build  meson.options  sonar-project.properties
.github/workflows/: Build-HorizonOS.yml  Build-aarch64.yml  Build-riscv64.yml  Build-x86_64.yml  Setup-Deps.yml
docs/: VirtualMemory.md
links/: kernel-aarch64-debug  kernel-aarch64-release  kernel-riscv64-debug  kernel-riscv64-release  kernel-x86_64-debug  kernel-x86_64-release
modules/: meson.build
modules/components/kernel/: meson.build  meson.options
modules/components/kernel/arches/: uacpi
modules/components/kernel/kernel-x86_64/src/: Main.hpp
modules/components/kernel/kernel-x86_64/src/hal/: GDT.cpp  GDT.hpp
modules/components/libs/hos-base/: meson.build
res/: Limine.cfg  Limine.conf
res/aarch64/: Linker.ld
res/riscv64/: Linker.ld
res/x86_64/: Linker.ld
scripts/: FileGrabber.sh  RunDebugQemu  RunDebugQemu.sh
src/: CMakeLists.txt
src/kernel/: CMakeLists.txt  meson.build
src/kernel/kernel-aarch64/: CMakeLists.txt
src/kernel/kernel-arm64/: CMakeLists.txt
src/kernel/kernel-common/: CMakeLists.txt  meson.build
src/kernel/kernel-common/src/: CommonMain.cpp  CommonMain.hpp  LimineRequests.cpp  Terminal.cpp  Terminal.hpp  UBSan.cpp  UBSan.hpp
src/kernel/kernel-common/src/hal/: AcpiPM.cpp  AcpiPM.hpp  Clock.cpp  Clock.hpp  IOPort.cpp  IOPort.hpp
src/kernel/kernel-common/src/memory/: CommonPaging.cpp  CommonPaging.hpp  KernelAllocator.cpp  KernelAllocator.hpp  KernelMemory.cpp  KernelMemory.hpp  MainMemory.cpp  MainMemory.hpp  PhysicalMemory.cpp  PhysicalMemory.hpp  VirtualAllocator.cpp  VirtualAllocator.hpp  VirtualMemory.cpp  VirtualMemory.hpp
src/kernel/kernel-common/src/threading/: IDAllocator.cpp  IDAllocator.hpp  Scheduler.cpp  Scheduler.hpp
src/kernel/kernel-common/src/threads/: SpinLock.hpp
src/kernel/kernel-common/src/uacpi/: UacpiKernAPI.cpp  UacpiKernAPI.hpp
src/kernel/kernel-common/src/utils/: MMIO.hpp  Memory.cpp  Memory.hpp  Utility.hpp
src/kernel/kernel-riscv64/: CMakeLists.txt
src/kernel/kernel-x86_64/: CMakeLists.txt  meson.build
src/kernel/kernel-x86_64/src/: Main.cpp  Main.hpp  TerminalX86.cpp  X86LimineRequests.cpp
src/kernel/kernel-x86_64/src/hal/: AcpiPM.cpp  AcpiPM.hpp  Apic.cpp  Apic.hpp  ClockX86.cpp  Cpu.cpp  Cpu.hpp  GDT.cpp  GDT.hpp  GDT.s  Hpet.cpp  Hpet.hpp  IDT.cpp  IDT.hpp  IDT.s  IOPort.cpp  IOPort.hpp  Interrupts.cpp  Interrupts.hpp  Interrupts.s  KvmClock.cpp  KvmClock.hpp  PIC.cpp  PIC.hpp  PIT.cpp  PIT.hpp  TSS.cpp  TSS.hpp  TSS.s  Tsc.cpp  Tsc.hpp
src/kernel/kernel-x86_64/src/memory/: Paging.cpp  Paging.hpp  Paging.s  X86VirtualAllocator.cpp  X86VirtualMemory.cpp  X86VirtualMemory.hpp  X86VirtualMemory.s  X86VirualMemory.cpp
src/kernel/kernel-x86_64/src/threading/: SchedulerX86.cpp  SchedulerX86.hpp  SchedulerX86.s
src/kernel/kernel-x86_64/src/threads/: SpinLock.cpp
src/kernel/kernel-x86_64/src/uacpi/: UacpiKernAPIX86.cpp
src/kernel/kernel-x86_64/src/utils/: Asm.cpp  Asm.hpp  CpuId.cpp  CpuId.hpp  MMIO.cpp  MMIO.hpp  MMIOX86.cpp
src/libs/: CMakeLists.txt
src/libs/hos-base/: CMakeLists.txt
src/libs/hos-base/src/: BitSet.hpp  Event.cpp  Event.hpp  Math.cpp  Math.hpp  SpinLock.cpp  SpinLock.hpp  TypeTraits.cpp  TypeTraits.hpp  Types.hpp  Vector.hpp
src/libs/uacpi/: CMakeLists.txt
